--- a/11.3 TinDog Project/css/style.css
+++ b/11.3 TinDog Project/css/style.css
@@ -26,3 +26,10 @@
   height: 100px;
   border-radius: 50%;
 }
+
+.feature-icon {
+  width: 4rem;
+  height: 4rem;
+  border-radius: .75rem;
+  color: beige;
+}
